squash a few css bugs and add images to response

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -94,6 +94,8 @@ body {
 	/* transform: translate(-50%, -50%) scale(0); */
 	transform: scale(0);
 	border: 0;
+	/* margin: auto; */
+	justify-content: center;
 	border-radius: 1.5rem;
 	z-index: 1;
 	background-color: var(--color-light);
